fix user authentication

--- a/app/views/users/form.erb
+++ b/app/views/users/form.erb
@@ -3,7 +3,7 @@
 <form method="POST" action="/users">
   <span>
     <input type="text" placeholder="username" name="username" />
-    <input type="password" placeholder="password" name="password_hash" />
+    <input type="password" placeholder="password" name="password" />
   </span>
   <span>
     <select name="race">
