adds user profile functionality IE num taken and num created

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,2 +1,14 @@
 <!-- display individual user information -->
-<h2><% current_user.username %>Profile</h2>
+<h2><%=user.username%>'s Profile</h2>
+<p>Set up their profile on: <%=user.created_at%></p>
+<p>Last logged in: <%=user.updated_at%></p>
+<h3><%=user.username%> has created: <%=user.surveys.length%> survey(s)!</h3>
+<%user.surveys.each do |survey|%>
+  <a href="/surveys"><%=survey.title%></a>
+  <br>
+<%end%>
+<p><%=user.username%> has taken: <%=user.taken_surveys.length%> surveys!</p>
+  <%user.taken_surveys.each do |taken|%>
+    <a href="/surveys"><%=taken.survey.title%></a>
+    <br>
+  <%end%>
