--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,8 +1,15 @@
-<h3><%= current_question.content %></h3>
-<form class="question-form" action="/taken_surveys/<%= current_taken_survey.id %>/answers" method="post">
-  <% current_question.possibilities.each do |possibility| %>
-    <input type="radio" name="possibility_id" value="<%= possibility.id %>"><%= possibility.choice %>
-  <% end %>
-  <input type="hidden" name="question_id" value="<%= current_question.id %>">
-  <input type="submit" value="submit" >
-</form>
+<div class="question-form-container">
+  <h3><%= current_question.content %></h3>
+    <form class="question-form" action="/taken_surveys/<%= current_taken_survey.id %>/answers" method="post">
+      <% current_question.possibilities.each do |possibility| %>
+      <input type="radio" name="possibility_id" value="<%= possibility.id %>"><%= possibility.choice %>
+    <% end %>
+      <input type="hidden" name="question_id" value="<%= current_question.id %>">
+      <input class="question-form-submit" type="submit" value="submit" >
+    </form>
+    <% if defined?(errors) %>
+      <% errors.each do |error| %>
+        <%= error %>
+      <% end %>
+    <% end %>
+</div>
