--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -1,4 +1,4 @@
-<form action="/surveys/<%= survey.id %>/questions" method="POST" >
+<form action="/surveys/<%= survey.id %>/questions" method="POST">
   <div class="question-maker">
     <input type= "text" name="content" placeholder="Your Question Here" />
     <textarea name="possibilities" rows="5" cols="50" placeholder="Your multiple choices here separated by a comma. Ex: Blue, Green, Red"></textarea>
@@ -6,3 +6,10 @@
     <input type="submit" name="done?" value="Done. Finish my survey">
   </div>
 </form>
+<% if defined?(errors) %>
+<ul>
+  <% errors.each do |error| %>
+    <li><%= error %></li>
+  <% end %>
+</ul>
+<% end %>
