adds changes to the landing page and layout features like greeting using helper method

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,7 @@
-<h1>QUES-KONG IS HERE</h1>
-<h3>Welcome</h3>
-<p>Ques-Kong is an interactive web application where you can both create and take surveys of ANY kind. As a survey creator, you can view statistics of your customized surveys. As a survey taker, you get the good feeling of contributing to very important research.</p>
-<h3>Get Started</h3>
+<h1>Welcome to QUES KONG</h1>
+<p>Ques Kong is an interactive web application where you can create and take surveys of ANY kind. As a survey creator, you can view statistics of your customized surveys. As a survey taker, you get the good feeling of contributing to very important research.</p>
 
-<div class="container">
-  <div class="landing-page-button"><a href = "/surveys">Take a Survey</a></div>
-  <div class="landing-page-button"><a href = "/surveys/new">Make a Survey</a></div>
+<div class="front-page-container">
+  <a href = "/surveys"><div class="landing-page-button">Take a Survey</div></a>
+  <a href = "/surveys/new"><div class="landing-page-button">Make a Survey</div></a>
 </div>
