refactor possibility logic - it broke when I tried to make a survey - also add survey edit view page with unfinished user_controller logic

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -1,7 +1,7 @@
 <form action="/surveys/<%= survey.id %>/questions" method="POST">
   <div class="question-maker">
-    <input type= "text" name="content" placeholder="Your Question Here" />
-    <textarea name="possibilities" rows="5" cols="50" placeholder="Your multiple choices here separated by a comma. Ex: Blue, Green, Red"></textarea>
+    <p><input type= "text" name="content" placeholder="Your Question Here" /></p>
+    <p><textarea name="possibilities" rows="5" cols="50" placeholder="Your multiple choices here separated by a comma. Ex: Blue, Green, Red"></textarea></p>
     <input type="submit" name="done?" value="Make next question"/>
     <input type="submit" name="done?" value="Done. Finish my survey">
   </div>
