--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -2,7 +2,8 @@
   <h3><%= current_question.content %></h3>
     <form class="question-form" action="/taken_surveys/<%= current_taken_survey.id %>/answers" method="post">
       <% current_question.possibilities.each do |possibility| %>
-      <input type="radio" name="possibility_id" value="<%= possibility.id %>"><%= possibility.choice %>
+      <input type="radio" name="possibility_id" value="<%= possibility.id %>">
+      <p><%= possibility.choice %></p>
     <% end %>
       <input type="hidden" name="question_id" value="<%= current_question.id %>">
       <input class="question-form-submit" type="submit" value="submit" >
