--- a/app/views/surveys/new.erb
+++ b/app/views/surveys/new.erb
@@ -1,10 +1,10 @@
 <h3>Survey-Create Wizard</h3>
 <form method="post" action="/surveys">
   <div class="title">
-    <input type="text" name="title" placeholder="Your Title Goes Here">
-    <textarea name="description" placeholder="Describe the purpose of your survey."></textarea>
+    <p><input type="text" name="title" placeholder="Your Title Goes Here"></p>
+    <p><textarea name="description" placeholder="Describe the purpose of your survey."></textarea></p>
   </div>
-  <input type="submit" value="Make my Survey Title!"/>
+  <p><input type="submit" value="Make my Survey Title!"/></p>
 </form>
 <% if defined?(errors) %>
 <ul>
