add ajax for make survey & fix login

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,5 +3,6 @@
 
 <div class="front-page-container">
   <a href = "/surveys"><div class="landing-page-button">Take a Survey</div></a>
-  <a href = "/surveys/new"><div class="landing-page-button">Make a Survey</div></a>
+  <a class = "make-survey" href = "/surveys/new"><div class="landing-page-button">Make a Survey</div></a>
 </div>
+<div class="append-div"></div>
