--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -1,4 +1,4 @@
-<form action="/surveys/<%= survey.id %>/questions" method="POST">
+<form class="make-question" action="/surveys/<%= survey.id %>/questions" method="POST">
   <div class="question-maker">
     <p><input type= "text" name="content" placeholder="Your Question Here" /></p>
     <p><textarea name="possibilities" rows="5" cols="50" placeholder="Your multiple choices here separated by a comma. Ex: Blue, Green, Red"></textarea></p>
