--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -2,8 +2,8 @@
   <div class="question-maker">
     <p><input type= "text" name="content" placeholder="Your Question Here" /></p>
     <p><textarea name="possibilities" rows="5" cols="50" placeholder="Your multiple choices here separated by a comma. Ex: Blue, Green, Red"></textarea></p>
-    <input type="submit" name="done?" value="Make next question"/>
-    <input type="submit" name="done?" value="Done. Finish my survey">
+    <input type="submit" name="done" value="Make next question"/>
+    <input type="submit" name="done" value="Done. Finish my survey">
   </div>
 </form>
 <% if defined?(errors) %>
