--- a/app/views/surveys/show.erb
+++ b/app/views/surveys/show.erb
@@ -1,8 +1,15 @@
 <h2><%=survey.title%><h2>
-<h3><%=survey.description%><h3>
+<h3><%=survey.description%></h3>
 <p>Total number of questions: <%=survey.questions.length%></p>
 <p><%=survey.takers.length%> people have taken this survey!</p>
-<form action="/taken_surveys" method="POST">
-      <input type="hidden" name="survey_id" value ="<%= survey.id %>">
-      <input type = "submit"  value="Take this survey!">
-</form>
+<% if current_user.id == survey.id %>
+  <form action="/taken_surveys" method="POST">
+        <input type="hidden" name="survey_id" value ="<%= survey.id %>">
+        <input type = "submit"  value="See the Stats for this Survey!">
+  </form>
+<% else %>
+  <form action="/taken_surveys" method="POST">
+        <input type="hidden" name="survey_id" value ="<%= survey.id %>">
+        <input type = "submit"  value="Take this survey!">
+  </form>
+<% end %>
