--- a/app/views/surveys/show.erb
+++ b/app/views/surveys/show.erb
@@ -2,7 +2,7 @@
 <h3><%=survey.description%></h3>
 <p>Total number of questions: <%=survey.questions.length%></p>
 <p><%=survey.takers.length%> people have taken this survey!</p>
-<% if current_user.id == survey.id %>
+<% if current_user.id == survey.maker.id %>
   <form action="/taken_surveys" method="POST">
         <input type="hidden" name="survey_id" value ="<%= survey.id %>">
         <input type = "submit"  value="See the Stats for this Survey!">
